--- a/templates/blog/post-detail.html
+++ b/templates/blog/post-detail.html
@@ -2,6 +2,7 @@
 {% load blog_extras %}
 {% block content %}
 <h2>{{ post.title }}</h2>
+{% include "blog/post-comments.html" %}
 {% row "border-bottom" %}
     <div class="col">
         {% include "blog/post-byline.html" %}
@@ -12,6 +13,7 @@
         {{ post.content|safe }}
     </div>
 <!-- existing code here -->
+{% include "blog/post-comments.html" %}
 {% row %}
     {% col %}
     {% debug %}
